--- a/app/styles/media-query.css
+++ b/app/styles/media-query.css
@@ -120,6 +120,12 @@ and (max-width : 720px) {
 		display: none;
 	}
 
+	#splash {
+		z-index: -5;
+		display: none;
+		visibility: hidden;
+	}
+
 }
 
 
